--- a/src/main/resources/templates/channel.html
+++ b/src/main/resources/templates/channel.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="/css/channel.css">
 	</head>
 	<body>
-		<div class="textbox" id="messages">This is where other text will go!</div>
+		<div class="textbox" id="messages"></div>
 		<div class="textbox" id="message-text">
 			<input type="text" id="message-input" placeholder="Type your message here">
 
